# TinyINR

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_coordinate_embedding.cu  bench_utils.cuh  benchmark_coordinate_embedding.cu  benchmark_cpu_embedding.cpp
benchmarks/results/: coordinate_embedding.csv
docs/: benchmark_architecture.md  benchmark_architecture_tmp.html  coordinate_batch.md  fourier_embedding.md  fourier_embedding_tmp.html  kernel_architecture.md  milestones.md  tensor-implementation.md  tensor-implementation_tmp.html  tensor-notes.html  website-upgrade-implementation.html
include/: tensor.h
include/ops/: coordinate_batch.h  fourier_embedding.h  fourier_embedding_raw.h
src/: tensor.cpp
src/kernels/: coordinate_embedding.cu  coordinate_embedding.cuh  cuda_utils.cuh
src/ops/: coordinate_batch.cpp  fourier_embedding.cpp  fourier_embedding_raw.cpp
tests/: test_coordinate_embedding.cu  test_cpu_cuda_parity.cu  test_fourier_embedding_cpu.cpp  test_fourier_embedding_cuda.cu
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/articles/: page.tsx
web/app/post/[slug]/: flow-matching.tsx  milestone-one.tsx  page.tsx
web/components/: KatexBlock.tsx  KatexInline.tsx  MathDisclosure.tsx  MotionReveal.tsx  SiteLayout.tsx  VectorField.tsx
web/data/: posts.ts
